--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
 	<script>
 		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date(); a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-101851721-1', 'auto');
@@ -51,12 +51,12 @@
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="60,000">
+							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment Amount" value="60,000">
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="20.000">
+							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment Percent" value="20.000">
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
@@ -72,6 +72,22 @@
 							<div class="input-group-addon">monthly</div>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="form-group form-group-md nopadding has-error">
+					<label class="col-sm-3 control-label" for="formGroupInputSmall">HOA</label>
+					<div class="col-sm-4">
+						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+							<div class="input-group-addon">$</div>
+							<input type="text" class="form-control form-control-error" id="hoa" placeholder="HOA" value="120" aria-describedby="helpBlock2">
+							<span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+							<span id="inputError2Status" class="sr-only">(error)</span>
+							<div class="input-group-addon">monthly</div>
+						</div>
+						<span id="helpBlock2" class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+					</div>
+
 				</div>
 			</div>
 			<div class="row">
@@ -125,25 +141,25 @@
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Interest Rate (APR)</label>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control input-md" id="interest-rate-10" value="3.125">
+							<input type="text" class="form-control input-md" id="interest-rate-10" placeholder="10 yr APR" value="3.125">
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-15" value="3.250">
+							<input type="text" class="form-control" id="interest-rate-15" placeholder="15 yr APR" value="3.250">
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-20" value="3.750">
+							<input type="text" class="form-control" id="interest-rate-20" placeholder="20 yr APR" value="3.750">
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-30" value="4.025">
+							<input type="text" class="form-control" id="interest-rate-30" placeholder="30 yr APR" value="4.025">
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
@@ -184,11 +200,12 @@
 	</div>
 	<p>
 		<div class="container">
-			<table class="table table-striped">
-				<tbody id="table8">
-				</tbody>
-			</table>
-
+			<div class="col-sm-12">
+				<table class="table table-striped" align="center">
+					<tbody id="table8">
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</p>
 	<!--<p>
