--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	 crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
+	<link rel="stylesheet" href="https://rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
 	<script>
 		(function (i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -75,19 +75,18 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding has-error">
+				<div id="hoa-group" class="form-group form-group-md nopadding">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">HOA</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control form-control-error" id="hoa" placeholder="HOA" value="120" aria-describedby="helpBlock2">
-							<span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-							<span id="inputError2Status" class="sr-only">(error)</span>
+							<input type="text" class="form-control" id="hoa2" placeholder="HOA" value="120" aria-describedby="helpBlock2">
+							<span id="hoa-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+							<span id="inputError2Status" class="sr-only">(success)</span>
 							<div class="input-group-addon">monthly</div>
 						</div>
-						<span id="helpBlock2" class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+						<span id="helpBlock2" class="help-block">Please enter a value below 100.</span>
 					</div>
-
 				</div>
 			</div>
 			<div class="row">
@@ -95,7 +94,7 @@
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Property Tax Rate</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="property-tax-rate" placeholder="Property Tax Rate" value=".840">
+							<input type="text" class="form-control" id="property-tax-rate" placeholder="Property Tax Rate" value=".840" required>
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
@@ -252,5 +251,5 @@
 	</p>-->
 
 </body>
-<script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/js/myJava.js"></script>
-<script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/js/myJavaBeta.js"></script>
+<script type="text/javascript" src="https://rawgit.com/escottj/MortgageCalculator/master/js/myJava.js"></script>
+<script type="text/javascript" src="https://rawgit.com/escottj/MortgageCalculator/master/js/myJavaBeta.js"></script>
