--- a/index.html
+++ b/index.html
@@ -35,43 +35,37 @@
 	<div class="container">
 		<form class="form-horizontal">
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="home-cost-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Home Cost</label>
-					<div class="col-sm-4">
+					<div id="home-cost-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="home-cost" placeholder="Home Cost" value="300,000">
+							<input type="text" class="form-control" id="home-cost" placeholder="Home Cost" value="" aria-describedby="home-cost-help-block">
+							<span id="home-cost-glyph" class="glyphicon form-control-feedback glyphicon-right" aria-hidden="true"></span>
 						</div>
+						<span style="display: none;" id="home-cost-help-block" class="help-block">Please enter a value between 10,000 and 1,000,000,000.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="down-payment-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Down Payment</label>
-					<div class="col-sm-4">
+					<div id="down-payment-dollars-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment Amount" value="60,000">
+							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="" aria-describedby="down-payment-dollars-help-block">
+							<span id="down-payment-dollars-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 						</div>
+						<span style="display: none;" id="down-payment-dollars-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
-					<div class="col-sm-4">
+					<div id="down-payment-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment Percent" value="20.000">
+							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="" aria-describedby="down-payment-help-block">
+							<span id="down-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="form-group form-group-md nopadding">
-					<label class="col-sm-3 control-label" for="formGroupInputSmall">HOA</label>
-					<div class="col-sm-4">
-						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="120">
-							<div class="input-group-addon">monthly</div>
-						</div>
-					</div>
+					<span style="display: none;" id="down-payment-help-block" class="help-block">Please enter a value below 100.</span>
 				</div>
 			</div>
 			<div class="row">
@@ -80,87 +74,102 @@
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoa2" placeholder="HOA" value="120" aria-describedby="helpBlock2">
+							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="" aria-describedby="hoa-help-block">
 							<span id="hoa-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-							<span id="inputError2Status" class="sr-only">(success)</span>
 							<div class="input-group-addon">monthly</div>
 						</div>
-						<span id="helpBlock2" class="help-block">Please enter a value below 100.</span>
+						<span style="display: none;" id="hoa-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="property-tax-rate-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Property Tax Rate</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="property-tax-rate" placeholder="Property Tax Rate" value=".840" required>
+							<input type="text" class="form-control" id="property-tax-rate" placeholder="Property Tax Rate" value="" aria-describedby="property-tax-rate-help-block">
+							<span id="property-tax-rate-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="property-tax-rate-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="pmi-group" class="form-group form-group-md nopadding">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">PMI</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="1.000">
+							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="" aria-describedby="pmi-help-block">
+							<span id="pmi-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="pmi-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="hoi-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Home Owner's Insurance</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoi" placeholder="(monthly)" value="100">
+							<input type="text" class="form-control" id="hoi" placeholder="Home Owner's Insurance" value="" aria-describedby="hoi-help-block">
+							<span id="hoi-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
+						<span style="display: none;" id="hoi-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="extra-payment-group" class="form-group form-group-md nopadding">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Extra Payment</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="0">
+							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="" aria-describedby="extra-payment-help-block">
+							<span id="extra-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
+						<span style="display: none;" id="extra-payment-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group form-group-md nopadding">
+				<div id="interest-rate-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Interest Rate (APR)</label>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control input-md" id="interest-rate-10" placeholder="10 yr APR" value="3.125">
+							<input type="text" class="form-control input-md" id="interest-rate-10" placeholder="10 yr APR" value="3.125" aria-describedby="interest-rate-10-block">
+							<span id="interest-rate-10-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="interest-rate-10-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-15" placeholder="15 yr APR" value="3.250">
+							<input type="text" class="form-control input-md" id="interest-rate-15" placeholder="15 yr APR" value="3.250" aria-describedby="interest-rate-15-block">
+							<span id="interest-rate-15-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="interest-rate-15-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-20" placeholder="20 yr APR" value="3.750">
+							<input type="text" class="form-control input-md" id="interest-rate-20" placeholder="20 yr APR" value="3.750" aria-describedby="interest-rate-20-block">
+							<span id="interest-rate-20-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="interest-rate-20-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 					<div class="col-sm-2">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="interest-rate-30" placeholder="30 yr APR" value="4.025">
+							<input type="text" class="form-control input-md" id="interest-rate-30" placeholder="30 yr APR" value="4.025" aria-describedby="interest-rate-30-block">
+							<span id="interest-rate-30-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
+						<span style="display: none;" id="interest-rate-30-help-block" class="help-block">Please enter a value below 100.</span>
 					</div>
 				</div>
 			</div>
