--- a/index.html
+++ b/index.html
@@ -326,6 +326,13 @@
 							<td id="3">$100.00</td>
 						</tr>
 						<tr>
+							<th>Monthly HOA</th>
+							<td id="0">$100.00</td>
+							<td id="1">$100.00</td>
+							<td id="2">$100.00</td>
+							<td id="3">$100.00</td>
+						</tr>
+						<tr>
 							<th>Total Monthly Payment</th>
 							<td id="0">$2,741.33</td>
 							<td id="1">$2,096.41</td>
@@ -333,14 +340,38 @@
 							<td id="3">$1,559.26</td>
 						</tr>
 						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">PMI Details</th>
+							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Early Mortgage Payoff</th>
 						</tr>
 						<tr>
-							<th>Total PMI Paid</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$0.00</td>
+							<th>Extra Monthly Payment</th>
+							<td id="0">$1,000.00</td>
+							<td id="1">$1,000.00</td>
+							<td id="2">$1,000.00</td>
+							<td id="3">$1,000.00</td>
+						</tr>
+						<tr>
+							<th>Months Until Mortgage is Paid Off</th>
+							<td id="0">150</td>
+							<td id="1">150</td>
+							<td id="2">150</td>
+							<td id="3">150</td>
+						</tr>
+						<tr>
+							<th>Total Interest Paid</th>
+							<td id="0">$39,759.79</td>
+							<td id="1">$41,429.33</td>
+							<td id="2">$48,173.79</td>
+							<td id="3">$51,927.28</td>
+						</tr>
+						<tr>
+							<th>Total Interest Savings</th>
+							<td id="0">$10,000.00</td>
+							<td id="1">$10,000.00</td>
+							<td id="2">$10,000.00</td>
+							<td id="3">$10,000.00</td>
+						</tr>
+						<tr>
+							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">PMI Details</th>
 						</tr>
 						<tr>
 							<th>Months Until 20% Equity</th>
@@ -348,6 +379,13 @@
 							<td id="1">0</td>
 							<td id="2">0</td>
 							<td id="3">0</td>
+						</tr>
+						<tr>
+							<th>Total PMI Paid</th>
+							<td id="0">$0.00</td>
+							<td id="1">$0.00</td>
+							<td id="2">$0.00</td>
+							<td id="3">$0.00</td>
 						</tr>
 						<tr>
 							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Total Interest Paid</th>
@@ -381,11 +419,11 @@
 							<td id="3">$173,733.05</td>
 						</tr>
 						<tr>
-							<th></th>
-							<td id="0"><button class="btn btn-danger btn-sm" onclick="deleteTest('0')">Delete</button></td>
-							<td id="1"><button class="btn btn-danger btn-sm" onclick="deleteTest('1')">Delete</button></td>
-							<td id="2"><button class="btn btn-danger btn-sm" onclick="deleteTest('2')">Delete</button></td>
-							<td id="3"><button class="btn btn-danger btn-sm" onclick="deleteTest('3')">Delete</button></td>
+							<th style="background-color: white;"></th>
+							<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('0')">Delete</button></td>
+							<td id="1" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('1')">Delete</button></td>
+							<td id="2" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('2')">Delete</button></td>
+							<td id="3" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('3')">Delete</button></td>
 						</tr>
 					</tbody>
 				</table>
