--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<div id="hoa-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="100" aria-describedby="hoa-help-block">
+							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="120" aria-describedby="hoa-help-block">
 							<span id="hoa-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
@@ -388,7 +388,7 @@
 							<td id="3">$0.00</td>
 						</tr>
 						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Total Interest Paid</th>
+							<th class="mergedTitle" colspan="100%">Total Interest Paid</th>
 						</tr>
 						<tr>
 							<th>If Paid Off in 10 years</th>
