--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 					<div id="down-payment-dollars-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="60,000" aria-describedby="down-payment-dollars-help-block">
+							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="45,000" aria-describedby="down-payment-dollars-help-block">
 							<span id="down-payment-dollars-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 						</div>
 						<span style="display: none;" id="down-payment-dollars-help-block" class="help-block">Please enter a down payment that is less than home cost.</span>
 					</div>
 					<div id="down-payment-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="20.000" aria-describedby="down-payment-help-block">
+							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="15.000" aria-describedby="down-payment-help-block">
 							<span id="down-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
@@ -100,7 +100,7 @@
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">PMI</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="" aria-describedby="pmi-help-block">
+							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="1" aria-describedby="pmi-help-block">
 							<span id="pmi-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
@@ -128,7 +128,7 @@
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="" aria-describedby="extra-payment-help-block">
+							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="100" aria-describedby="extra-payment-help-block">
 							<span id="extra-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
@@ -258,194 +258,197 @@
 			</div>
 		</div>
 	</p>-->
-	<div class="container">
-		<div class="col-sm-12">
-			<div class="table-responsive">
-				<table class="table table-striped" align="center">
-					<tbody id="table8">
-						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Loan Details</th>
-						</tr>
-						<tr>
-							<th>Loan Term</th>
-							<td id="0">10 years</td>
-							<td id="1">15 years</td>
-							<td id="2">20 years</td>
-							<td id="3">30 years</td>
-						</tr>
-						<tr>
-							<th>Interest Rate</th>
-							<td id="0">3.125%</td>
-							<td id="1">3.250%</td>
-							<td id="2">3.750%</td>
-							<td id="3">4.025%</td>
-						</tr>
-						<tr>
-							<th>Down Payment</th>
-							<td id="0">$60,000.00</td>
-							<td id="1">$60,000.00</td>
-							<td id="2">$60,000.00</td>
-							<td id="3">$60,000.00</td>
-						</tr>
-						<tr>
-							<th>Loan Amount</th>
-							<td id="0">$240,000.00</td>
-							<td id="1">$240,000.00</td>
-							<td id="2">$240,000.00</td>
-							<td id="3">$240,000.00</td>
-						</tr>
-						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Monthly Payment Breakdown</th>
-						</tr>
-						<tr>
-							<th>Monthly Mortgage Payment</th>
-							<td id="0">$2,331.33</td>
-							<td id="1">$1,686.41</td>
-							<td id="2">$1,422.93</td>
-							<td id="3">$1,149.26</td>
-						</tr>
-						<tr>
-							<th>Monthly Property Tax</th>
-							<td id="0">$210.00</td>
-							<td id="1">$210.00</td>
-							<td id="2">$210.00</td>
-							<td id="3">$210.00</td>
-						</tr>
-						<tr>
-							<th>Monthly Home Owner's Insurance</th>
-							<td id="0">$100.00</td>
-							<td id="1">$100.00</td>
-							<td id="2">$100.00</td>
-							<td id="3">$100.00</td>
-						</tr>
-						<tr>
-							<th>Monthly PMI</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$0.00</td>
-						</tr>
-						<tr>
-							<th>Monthly HOA</th>
-							<td id="0">$100.00</td>
-							<td id="1">$100.00</td>
-							<td id="2">$100.00</td>
-							<td id="3">$100.00</td>
-						</tr>
-						<tr>
-							<th>Total Monthly Payment</th>
-							<td id="0">$2,741.33</td>
-							<td id="1">$2,096.41</td>
-							<td id="2">$1,832.93</td>
-							<td id="3">$1,559.26</td>
-						</tr>
-						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Early Mortgage Payoff</th>
-						</tr>
-						<tr>
-							<th>Extra Monthly Payment</th>
-							<td id="0">$1,000.00</td>
-							<td id="1">$1,000.00</td>
-							<td id="2">$1,000.00</td>
-							<td id="3">$1,000.00</td>
-						</tr>
-						<tr>
-							<th>Months Until Mortgage is Paid Off</th>
-							<td id="0">150</td>
-							<td id="1">150</td>
-							<td id="2">150</td>
-							<td id="3">150</td>
-						</tr>
-						<tr>
-							<th>Total Interest Paid</th>
-							<td id="0">$39,759.79</td>
-							<td id="1">$41,429.33</td>
-							<td id="2">$48,173.79</td>
-							<td id="3">$51,927.28</td>
-						</tr>
-						<tr>
-							<th>Total Interest Savings</th>
-							<td id="0">$10,000.00</td>
-							<td id="1">$10,000.00</td>
-							<td id="2">$10,000.00</td>
-							<td id="3">$10,000.00</td>
-						</tr>
-						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">PMI Details</th>
-						</tr>
-						<tr>
-							<th>Months Until 20% Equity</th>
-							<td id="0">0</td>
-							<td id="1">0</td>
-							<td id="2">0</td>
-							<td id="3">0</td>
-						</tr>
-						<tr>
-							<th>Total PMI Paid</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$0.00</td>
-						</tr>
-						<tr>
-							<th class="mergedTitle" colspan="100%">Total Interest Paid</th>
-						</tr>
-						<tr>
-							<th>If Paid Off in 10 years</th>
-							<td id="0">$39,759.79</td>
-							<td id="1">$41,429.33</td>
-							<td id="2">$48,173.79</td>
-							<td id="3">$51,927.28</td>
-						</tr>
-						<tr>
-							<th>If Paid Off in 15 years</th>
-							<td id="0">$0.00</td>
-							<td id="1">$63,552.91</td>
-							<td id="2">$74,149.33</td>
-							<td id="3">$80,074.00</td>
-						</tr>
-						<tr>
-							<th>If Paid Off in 20 years</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$101,503.67</td>
-							<td id="3">$109,804.15</td>
-						</tr>
-						<tr>
-							<th>If Paid Off in 30 years</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$173,733.05</td>
-						</tr>
-						<tr>
-							<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Total Out Of Pocket Cost Over Life of Loan</th>
-						</tr>
-						<tr>
-							<th>Total Cost (Obligation)</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$173,733.05</td>
-						</tr>
-						<tr>
-							<th>Total Cost (Obligation + Optional)</th>
-							<td id="0">$0.00</td>
-							<td id="1">$0.00</td>
-							<td id="2">$0.00</td>
-							<td id="3">$173,733.05</td>
-						</tr>
-						<tr>
-							<th style="background-color: white;"></th>
-							<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('0')">Delete</button></td>
-							<td id="1" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('1')">Delete</button></td>
-							<td id="2" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('2')">Delete</button></td>
-							<td id="3" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('3')">Delete</button></td>
-						</tr>
+	<!--<div class="container">
+	<div class="col-sm-12">
+		<div class="table-responsive">
+			<table class="table table-striped" align="center">
+				<tbody id="table8">
+					<tr>
+						<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Loan Details</th>
+					</tr>
+					<tr>
+						<th>Loan Term</th>
+						<td id="0">10 years</td>
+						<td id="1">15 years</td>
+						<td id="2">20 years</td>
+						<td id="3">30 years</td>
+					</tr>
+					<tr>
+						<th>Interest Rate</th>
+						<td id="0">3.125%</td>
+						<td id="1">3.250%</td>
+						<td id="2">3.750%</td>
+						<td id="3">4.025%</td>
+					</tr>
+					<tr>
+						<th>Down Payment</th>
+						<td id="0">$60,000.00</td>
+						<td id="1">$60,000.00</td>
+						<td id="2">$60,000.00</td>
+						<td id="3">$60,000.00</td>
+					</tr>
+					<tr>
+						<th>Loan Amount</th>
+						<td id="0">$240,000.00</td>
+						<td id="1">$240,000.00</td>
+						<td id="2">$240,000.00</td>
+						<td id="3">$240,000.00</td>
+					</tr>
+					<tr>
+						<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Monthly Payment Breakdown</th>
+					</tr>
+					<tr>
+						<th>Monthly Mortgage Payment</th>
+						<td id="0">$2,331.33</td>
+						<td id="1">$1,686.41</td>
+						<td id="2">$1,422.93</td>
+						<td id="3">$1,149.26</td>
+					</tr>
+					<tr>
+						<th>Monthly Property Tax</th>
+						<td id="0">$210.00</td>
+						<td id="1">$210.00</td>
+						<td id="2">$210.00</td>
+						<td id="3">$210.00</td>
+					</tr>
+					<tr>
+						<th>Monthly Home Owner's Insurance</th>
+						<td id="0">$100.00</td>
+						<td id="1">$100.00</td>
+						<td id="2">$100.00</td>
+						<td id="3">$100.00</td>
+					</tr>
+					<tr>
+						<th>Monthly PMI</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$0.00</td>
+						<td id="3">$0.00</td>
+					</tr>
+					<tr>
+						<th>Monthly HOA</th>
+						<td id="0">$100.00</td>
+						<td id="1">$100.00</td>
+						<td id="2">$100.00</td>
+						<td id="3">$100.00</td>
+					</tr>
+					<tr>
+						<th>Total Monthly Payment</th>
+						<td id="0">$2,741.33</td>
+						<td id="1">$2,096.41</td>
+						<td id="2">$1,832.93</td>
+						<td id="3">$1,559.26</td>
+					</tr>
+					<tr>
+						<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Early Mortgage Payoff</th>
+					</tr>
+					<tr>
+						<th>Extra Monthly Payment</th>
+						<td id="0">$1,000.00</td>
+						<td id="1">$1,000.00</td>
+						<td id="2">$1,000.00</td>
+						<td id="3">$1,000.00</td>
+					</tr>
+					<tr>
+						<th>Months Until Mortgage is Paid Off</th>
+						<td id="0">150</td>
+						<td id="1">150</td>
+						<td id="2">150</td>
+						<td id="3">150</td>
+					</tr>
+					<tr>
+						<th>Total Interest Paid</th>
+						<td id="0">$39,759.79</td>
+						<td id="1">$41,429.33</td>
+						<td id="2">$48,173.79</td>
+						<td id="3">$51,927.28</td>
+					</tr>
+					<tr>
+						<th>Total Interest Savings</th>
+						<td id="0">$10,000.00</td>
+						<td id="1">$10,000.00</td>
+						<td id="2">$10,000.00</td>
+						<td id="3">$10,000.00</td>
+					</tr>
+					<tr>
+						<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">PMI Details</th>
+					</tr>
+					<tr>
+						<th>Months Until 20% Equity</th>
+						<td id="0">0</td>
+						<td id="1">0</td>
+						<td id="2">0</td>
+						<td id="3">0</td>
+					</tr>
+					<tr>
+						<th>Total PMI Paid</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$0.00</td>
+						<td id="3">$0.00</td>
+					</tr>
+					<tr>
+						<th class="mergedTitle" colspan="100%">Total Interest Paid</th>
+					</tr>
+					<tr>
+						<th>If Paid Off in 10 years</th>
+						<td id="0">$39,759.79</td>
+						<td id="1">$41,429.33</td>
+						<td id="2">$48,173.79</td>
+						<td id="3">$51,927.28</td>
+					</tr>
+					<tr>
+						<th>If Paid Off in 15 years</th>
+						<td id="0">$0.00</td>
+						<td id="1">$63,552.91</td>
+						<td id="2">$74,149.33</td>
+						<td id="3">$80,074.00</td>
+					</tr>
+					<tr>
+						<th>If Paid Off in 20 years</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$101,503.67</td>
+						<td id="3">$109,804.15</td>
+					</tr>
+					<tr>
+						<th>If Paid Off in 30 years</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$0.00</td>
+						<td id="3">$173,733.05</td>
+					</tr>
+					<tr>
+						<th colspan="100%" style="text-align: center; background-color: #45a9e8; color: white;">Total Out Of Pocket Cost Over Life of Loan</th>
+					</tr>
+					<tr>
+						<th>Total Cost (Obligation)</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$0.00</td>
+						<td id="3">$173,733.05</td>
+					</tr>
+					<tr>
+						<th>Total Cost (Obligation + Optional)</th>
+						<td id="0">$0.00</td>
+						<td id="1">$0.00</td>
+						<td id="2">$0.00</td>
+						<td id="3">$173,733.05</td>
+					</tr>
+					<tr>
+						<th style="background-color: white;"></th>
+						<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('0')">Delete</button></td>
+						<td id="1" style="background-color: white;"
+						 align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('1')">Delete</button></td>
+						<td id="2" style="background-color: white;"
+						 align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('2')">Delete</button></td>
+						<td id="3" style="background-color: white;"
+						 align="center"><button class="btn btn-danger btn-sm" onclick="deleteTest('3')">Delete</button></td>
+					</tr>
 					</tbody>
-				</table>
-			</div>
+			</table>
 		</div>
+	</div>-->
 	</div>
 </body>
 <script type="text/javascript" src="https://rawgit.com/escottj/MortgageCalculator/master/js/myJava.js"></script>
