--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 </head>
 
 <body>
-	<div class="jumbotron text-center">
-		<h2>Erick's Mortgage Calculator</h2>
-	</div>
-	<div class="container">
-		<form class="form-horizontal">
+	<div class="container col-sm-12">
+		<div class="jumbotron text-center">
+			<h2>Erick's Mortgage Calculator</h2>
+		</div>
+		<form class="form-horizontal col-sm-12">
 			<div class="row">
 				<div id="home-cost-group" class="form-group form-group-md nopadding required">
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">Home Cost</label>
 					<div id="home-cost-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="home-cost" placeholder="Home Cost" value="300,000" aria-describedby="home-cost-help-block">
+							<input type="text" class="form-control" id="home-cost" placeholder="Home Cost" value="300,000.00" aria-describedby="home-cost-help-block">
 							<span id="home-cost-glyph" class="glyphicon form-control-feedback glyphicon-right" aria-hidden="true"></span>
 						</div>
 						<span style="display: none;" id="home-cost-help-block" class="help-block">Please enter a value between 10,000 and 1,000,000,000.</span>
@@ -53,14 +53,14 @@
 					<div id="down-payment-dollars-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="45,000" aria-describedby="down-payment-dollars-help-block">
+							<input type="text" class="form-control" id="down-payment-dollars" placeholder="Down Payment" value="60,000.00" aria-describedby="down-payment-dollars-help-block">
 							<span id="down-payment-dollars-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 						</div>
 						<span style="display: none;" id="down-payment-dollars-help-block" class="help-block">Please enter a down payment that is less than home cost.</span>
 					</div>
 					<div id="down-payment-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="15.000" aria-describedby="down-payment-help-block">
+							<input type="text" class="form-control" id="down-payment" placeholder="Down Payment" value="20.000" aria-describedby="down-payment-help-block">
 							<span id="down-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
@@ -87,7 +87,7 @@
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoi" placeholder="Home Owner's Insurance" value="100" aria-describedby="hoi-help-block">
+							<input type="text" class="form-control" id="hoi" placeholder="Home Owner's Insurance" value="100.00" aria-describedby="hoi-help-block">
 							<span id="hoi-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
@@ -100,7 +100,7 @@
 					<label class="col-sm-3 control-label" for="formGroupInputSmall">PMI</label>
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="1" aria-describedby="pmi-help-block">
+							<input type="text" class="form-control" id="pmi" placeholder="PMI" value="1.000" aria-describedby="pmi-help-block">
 							<span id="pmi-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">%</div>
 						</div>
@@ -114,7 +114,7 @@
 					<div id="hoa-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="120" aria-describedby="hoa-help-block">
+							<input type="text" class="form-control" id="hoa" placeholder="HOA" value="120.00" aria-describedby="hoa-help-block">
 							<span id="hoa-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
@@ -128,7 +128,7 @@
 					<div class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="100" aria-describedby="extra-payment-help-block">
+							<input type="text" class="form-control" id="extra-payment" placeholder="Extra Payment" value="" aria-describedby="extra-payment-help-block">
 							<span id="extra-payment-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 							<div class="input-group-addon">monthly</div>
 						</div>
@@ -207,13 +207,11 @@
 		</form>
 	</div>
 	<p>
-		<div class="container">
-			<div class="col-sm-12">
-				<table class="table table-striped table-hover" align="center">
-					<tbody id="table8">
-					</tbody>
-				</table>
-			</div>
+		<div class="container col-sm-12">
+			<table class="table table-striped table-hover" align="center">
+				<tbody id="table8">
+				</tbody>
+			</table>
 		</div>
 	</p>
 	<!--<p>
